k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  ports:
    - port: 8084
      target_port: 8084
      protocol: TCP
      name: http
  selector:
    app: notification-service
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: ton-registry/notification-service:latest
          ports:
            - containerPort: 8084
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "384Mi"

          # Probes : Crucial ici car il y a 3 dépendances (DB, Cache, Broker)
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            initialDelaySeconds: 45 # Temps de démarrage légèrement plus long
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            initialDelaySeconds: 45
            periodSeconds: 10
