k8s/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: shipping-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
        - name: shipping-service
          image: otniel217/ecom-shipping-service:latest
          ports:
            - containerPort: 8085
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8085
            initialDelaySeconds: 40
